# projects

./: README.md
cmake_basics/: CMakeLists.txt  README.md  main.cpp
cmake_basics/libs/test/: CMakeLists.txt  test.cpp  test.h
cmake_basics/libs/test_two/: CMakeLists.txt  test.cpp  test.h
cmake_basics/libs/test_two/private/: CMakeLists.txt  items.h
coverage/: CMakeLists.txt  README.md  main.cpp  manual.sh  params.json
coverage/html/: index-sort-f.html  index-sort-l.html  index.html
coverage/html/lib/include/algorithm/: algo_1.h.func-sort-c.html  algo_1.h.func.html  algo_1.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/html/lib/src/: algo_1.cpp.func-sort-c.html  algo_1.cpp.func.html  algo_1.cpp.gcov.html  algo_2.cpp.func-sort-c.html  algo_2.cpp.func.html  algo_2.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/html/tests/: algo_test_1.cpp.func-sort-c.html  algo_test_1.cpp.func.html  algo_test_1.cpp.gcov.html  algo_test_2.cpp.func-sort-c.html  algo_test_2.cpp.func.html  algo_test_2.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main_tests.cpp.func-sort-c.html  main_tests.cpp.func.html  main_tests.cpp.gcov.html
coverage/lib/: CMakeLists.txt
coverage/lib/include/algorithm/: algo_1.h  algo_2.h
coverage/lib/src/: algo_1.cpp  algo_2.cpp
coverage/tests/: CMakeLists.txt  algo_test_1.cpp  algo_test_2.cpp  main_tests.cpp
failed_thread_pool/: CMakeLists.txt  README.md
failed_thread_pool/source/: CMakeLists.txt  context.h  function.h  global.h  manage_pool.h  print.h  thread_pool
makefile_basics/: Makefile  README.md  main.cpp
makefile_basics/source/: Makefile  header.cpp
monitor_dir/: CMakeLists.txt  README.md  main.cpp
monitor_dir/src/: CMakeLists.txt  monitor_path.cpp  monitor_path.h
mutex_demo/: CMakeLists.txt  README.md  main.cpp
n_thread/: CMakeLists.txt  README.md  main.cpp
